--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 pdf-keep/preview/
 pdf-keep/proofing/
-pdf-keep/preflight/
+pdf-keep/wet-proof/
 address-page.pdf
 frontmatter-page.pdf
 planner-page.pdf
